--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -16,6 +16,10 @@
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "mainBackground.jpg",
+      "type":"image/jpg"
     }
   ],
   "start_url": ".",
